--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,11 @@ ul {
   padding: 0;
   margin: 0;
 }
-
+a {
+  color: #000;
+  display: block;
+  text-decoration: none;
+}
 .list {
   list-style: none;
   margin: 0;
@@ -19,8 +23,8 @@ ul {
 
 .container {
   width: 1280px;
-  padding-right: 115px;
-  padding-left: 115px;
+  padding-right: 100px;
+  padding-left: 100px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -40,15 +44,17 @@ ul {
 
 .summary {
   padding: 20px;
-  background-color: #373741;
+  background-color: #57575c;
+  height: 290px;
   color: #fff;
-  margin-bottom: 40px;
 }
 .section-title-summary {
+  text-align: center;
   padding: 0;
   text-transform: uppercase;
   font-size: 20px;
 }
+
 .title-name {
   margin-bottom: 10px;
   text-transform: uppercase;
@@ -105,6 +111,7 @@ ul {
   margin-left: 20px;
 }
 .work-place {
+  width: 600px;
   margin-bottom: 20px;
 }
 .sidebar {
