--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,9 @@ a {
 }
 
 .summary {
-  padding: 20px;
+  padding-top: 50px;
+  padding-left: 30px;
+  width: 800px;
   background-color: #57575c;
   height: 290px;
   color: #fff;
@@ -79,7 +81,9 @@ a {
   font-size: 20px;
 }
 .section-text {
-  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 700px;
   font-size: 14px;
   line-height: 1.4;
 }
