--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@ h1,
 h2,
 h3,
 li,
-ul {
+ul,
+p {
   padding: 0;
   margin: 0;
 }
@@ -71,7 +72,7 @@ a {
 }
 .section-title {
   color: #fff;
-  width: 600px;
+  width: 750px;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 20px;
@@ -83,40 +84,53 @@ a {
 .section-text {
   margin-left: auto;
   margin-right: auto;
-  width: 700px;
+  /* width: 700px; */
   font-size: 14px;
   line-height: 1.4;
 }
 .section {
   padding-bottom: 40px;
 }
+
 .project-link {
-  font-weight: 400;
+  font-weight: bold;
   color: #000;
   font-size: 16px;
+  margin-bottom: 5px;
 }
 .project-text {
-  width: 600px;
+  /* width: 600px; */
   font-size: 14px;
   line-height: 1.4;
+  margin-bottom: 5px;
 }
 .position {
-  width: 600px;
+  font-weight: bold;
+  /* width: 600px; */
   font-size: 18px;
+  margin-bottom: 10px;
 }
 .employer {
   text-transform: uppercase;
   font-size: 14px;
+  margin-bottom: 10px;
 }
 .work-item {
-  width: 600px;
+  /* width: 600px; */
   font-size: 14px;
   line-height: 1.4;
   margin-left: 20px;
 }
 .work-place {
-  width: 600px;
+  /* width: 600px; */
   margin-bottom: 20px;
+}
+.responsibilities {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.education-items:not(:last-child) {
+  margin-bottom: 5px;
 }
 .sidebar {
   padding-top: 45px;
