--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ a {
 .summary {
   padding-top: 50px;
   padding-left: 30px;
+  padding-right: 20px;
   width: 800px;
   background-color: #57575c;
   height: 291px;
@@ -93,7 +94,7 @@ a {
 }
 
 .project-link {
-  font-weight: bold;
+  font-weight: 900;
   color: #000;
   font-size: 16px;
   margin-bottom: 5px;
@@ -106,7 +107,7 @@ a {
 }
 .position {
   font-weight: bold;
-  /* width: 600px; */
+
   font-size: 18px;
   margin-bottom: 10px;
 }
